[package]
name = "duefuse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
clap = { version = "4.4.0", features = ["cargo"] }
bincode = "1.3.1"
serde = { version = "1.0.102", features = ["std", "derive"] }
tempfile = "3"
fuser = "0.13.0"
libc = "0.2.147"
